# jenny-github-cli

./: CMakeLists.txt  README.md  main.py  test_main.py
.github/workflows/: cpp-ci.yaml  python-tests.yml
addcdiv_model/: addcdiv_model.py
addcdiv_model/tests/: test_addcdiv_model.py
addcmul_model/: addcmul_model.py
addcmul_model/tests/: test_addcmul_model.py
adddiv_model/: adddiv_model.py  test_addcdiv_model.py
adddiv_model/tests/: adddiv_model.py  test_adddiv_model.py
addmul_model/: addmul_model.py  test_addcmul_model.py
addmul_model/tests/: test_addcmul.py  test_addmul.py
compound_model/: compound_model.py
compound_model/tests/: test_compound_model.py
math_ops/: addcmul.py
src/: main.cpp  model_ops.py  muladd.cpp  muladd.h
tests/: test_main.cpp  test_model_ops.py
